# trtllm-latency

./: .gitignore  GPU_PLATFORM_NOTES.md  OFFBOX_WHEEL_WORKFLOW.md  README.md  build_engine.sh  download_hf_model.py  env.sh  generate_official_longctx_readme.py  normalize_qwen35_vlm_checkpoint.py  package_offbox_wheel_kit.py  pyproject.toml  run_latency_sweep.sh  run_paper_gap_matrix.sh  setup_uv_env.sh
configs/: greedy.yaml
measurements/rtx4070ti_qwen25_0p5b_official_cli/: README.md
measurements/rtx4070ti_qwen25_0p5b_official_cli/reports/: in16_out40_bs1.json  in32_out40_bs1.json  in64_out40_bs1.json  in87_out40_bs1.json  in8_out40_bs1.json
measurements/rtx4070ti_qwen25_0p5b_official_cli_longctx/: README.md
measurements/rtx4070ti_qwen25_0p5b_official_cli_longctx/datasets/: in1024_out40.json  in128_out40.json  in512_out40.json  in768_out40.json
measurements/rtx4070ti_qwen25_0p5b_official_cli_longctx/reports/: in1024_out40_bs1.json  in128_out40_bs1.json  in16_out40_bs1.json  in256_out40_bs1.json  in32_out40_bs1.json  in512_out40_bs1.json  in64_out40_bs1.json  in768_out40_bs1.json  in87_out40_bs1.json  in8_out40_bs1.json
measurements/rtx4070ti_qwen25_0p5b_official_cli_ultralongctx/: README.md
measurements/rtx6000_qwen25_0p5b_official_cli/: README.md
measurements/rtx6000_qwen25_0p5b_official_cli/reports/: in1024_out40_bs1.json  (+9 more)
measurements/rtx6000_qwen25_0p5b_official_cli_longctx/: README.md
measurements/rtx6000_qwen25_0p5b_official_cli_longctx_fp8/: README.md
measurements/rtx6000_qwen35_0p8b_official_cli_longctx/: BLOCKERS.md  STATUS_AND_REPRO.md
(+44 files in other folders)
